--- a/app/src/main/res/layout/activity_view_pager.xml
+++ b/app/src/main/res/layout/activity_view_pager.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="kr.co.marketlink.examples.ViewPagerExampleActivity">
+    tools:context="kr.co.marketlink.examples.ViewPagerActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
