--- a/app/src/main/res/layout/content_view_pager.xml
+++ b/app/src/main/res/layout/content_view_pager.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="kr.co.marketlink.examples.ViewPagerExampleActivity"
+    tools:context="kr.co.marketlink.examples.ViewPagerActivity"
     tools:showIn="@layout/activity_view_pager">
 
     <kr.co.marketlink.jsyang.ImageViewPager
