--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -11,17 +11,10 @@
         android:text="사진 찍기 시작"
         android:id="@+id/btn_load"/>
 
-    <FrameLayout
-        android:id="@+id/fl_camera_preview"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        />
-
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="300dp"
+        android:background="@android:color/holo_green_dark"
         android:id="@+id/iv_preview"/>
 
     <Button
