--- a/jsyang/src/main/res/layout/dialog_helper_sample.xml
+++ b/jsyang/src/main/res/layout/dialog_helper_sample.xml
@@ -1,21 +1,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tv_title"
+        android:layout_marginTop="24dp"
         android:gravity="center"
-        android:padding="10dp"
-        android:visibility="gone"
-        android:background="@android:color/holo_blue_light"/>
+        android:textStyle="bold"
+        android:visibility="gone"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:layout_marginBottom="8dp"
+        android:padding="16dp"
         android:id="@+id/tv_contents"/>
 
     <LinearLayout
@@ -30,7 +31,7 @@
             android:gravity="center"
             android:visibility="gone"
             android:id="@+id/tv_btn1"
-            android:padding="8dp"/>
+            android:padding="12dp"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -38,7 +39,7 @@
             android:gravity="center"
             android:visibility="gone"
             android:id="@+id/tv_btn2"
-            android:padding="8dp"/>
+            android:padding="12dp"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -46,7 +47,7 @@
             android:gravity="center"
             android:visibility="gone"
             android:id="@+id/tv_btn3"
-            android:padding="8dp"/>
+            android:padding="12dp"/>
 
     </LinearLayout>
 
