--- a/jsyang/src/main/res/layout/horizontal_image_item.xml
+++ b/jsyang/src/main/res/layout/horizontal_image_item.xml
@@ -8,6 +8,13 @@
         android:layout_height="match_parent"
         android:id="@+id/iv_img"/>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/black"
+        android:id="@+id/v_mask"
+        android:alpha="0.5"/>
+
     <TextView
         android:layout_width="24dp"
         android:layout_height="24dp"
